// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages.length > 0 1`] = `
<div
  className="flex-100 layout-row layout-align-center-start layout-wrap"
  style={
    Object {
      "marginBottom": "166px",
      "marginTop": "62px",
    }
  }
>
  <FlashMessages
    messages={
      Array [
        "FOO_MESSAGE",
      ]
    }
  />
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="flex-20 layout-row layout-wrap"
    >
      <RouteFilterBox
        availableMotKeys={
          Object {
            "undefined": true,
          }
        }
        durationFilter={40}
        moT={
          Object {
            "air": true,
            "ocean": true,
          }
        }
        pickup={false}
        setDepartureDate={[Function]}
        setDurationFilter={[Function]}
        setMoT={[Function]}
        shipment={
          Object {
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "notes": "FOO_NOTES",
            "schedules_charges": Object {
              "FOO_HUB_ROUTE_KEY": Object {
                "foo": "FOO_ROUTE_KEY",
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
          }
        }
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="flex-75 offset-5 layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-align-space-between-center"
        >
          <div
            className="flex-none layout-row layout-align-space-around-center pointy"
            onClick={[Function]}
          >
            <i
              className="flex-none fa fa-angle-double-left"
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            />
            <p
              className="flex-none no_m"
            >
              Show earlier departures
            </p>
          </div>
          <div
            className="flex-none layout-row layout-align-space-around-center pointy"
            onClick={[Function]}
          >
            <p
              className="flex-none no_m"
            >
              Show later departures
            </p>
            <i
              className="flex-none fa fa-angle-double-right"
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-between-center route_header"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              size={3}
              text="This is the closest departure to the specified date"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <NamedSelect
              className="flex-100"
              onChange={[Function]}
              options={
                Object {
                  "fooKey": "FOO_CURRENCY_OPTIONS",
                }
              }
              placeholder="Select Currency"
            />
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-align-start route_header"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              size={3}
              text="Alternative departures"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="back_to_dash_sec flex-100 layout-row layout-wrap layout-align-center"
  >
    <div
      className="content_width_booking flex-none layout-row layout-align-start-center"
    >
      <RoundButton
        back={true}
        handleNext={[Function]}
        iconClass="fa-angle0-left"
        text="Back to dashboard"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-align-center-start layout-wrap"
  style={
    Object {
      "marginBottom": "166px",
      "marginTop": "62px",
    }
  }
>
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="flex-20 layout-row layout-wrap"
    >
      <RouteFilterBox
        availableMotKeys={
          Object {
            "undefined": true,
          }
        }
        durationFilter={40}
        moT={
          Object {
            "air": true,
            "ocean": true,
          }
        }
        pickup={false}
        setDepartureDate={[Function]}
        setDurationFilter={[Function]}
        setMoT={[Function]}
        shipment={
          Object {
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "notes": "FOO_NOTES",
            "schedules_charges": Object {
              "FOO_HUB_ROUTE_KEY": Object {
                "foo": "FOO_ROUTE_KEY",
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
          }
        }
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="flex-75 offset-5 layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-align-space-between-center"
        >
          <div
            className="flex-none layout-row layout-align-space-around-center pointy"
            onClick={[Function]}
          >
            <i
              className="flex-none fa fa-angle-double-left"
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            />
            <p
              className="flex-none no_m"
            >
              Show earlier departures
            </p>
          </div>
          <div
            className="flex-none layout-row layout-align-space-around-center pointy"
            onClick={[Function]}
          >
            <p
              className="flex-none no_m"
            >
              Show later departures
            </p>
            <i
              className="flex-none fa fa-angle-double-right"
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-between-center route_header"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              size={3}
              text="This is the closest departure to the specified date"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <NamedSelect
              className="flex-100"
              onChange={[Function]}
              options={
                Object {
                  "fooKey": "FOO_CURRENCY_OPTIONS",
                }
              }
              placeholder="Select Currency"
            />
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-align-start route_header"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              size={3}
              text="Alternative departures"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="back_to_dash_sec flex-100 layout-row layout-wrap layout-align-center"
  >
    <div
      className="content_width_booking flex-none layout-row layout-align-start-center"
    >
      <RoundButton
        back={true}
        handleNext={[Function]}
        iconClass="fa-angle0-left"
        text="Back to dashboard"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`shipmentData is falsy 1`] = `""`;

exports[`shipmentData.schedules is falsy 1`] = `""`;

exports[`user.guest is true 1`] = `
<div
  className="flex-100 layout-row layout-align-center-start layout-wrap"
  style={
    Object {
      "marginBottom": "166px",
      "marginTop": "62px",
    }
  }
>
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="flex-20 layout-row layout-wrap"
    >
      <RouteFilterBox
        availableMotKeys={
          Object {
            "undefined": true,
          }
        }
        durationFilter={40}
        moT={
          Object {
            "air": true,
            "ocean": true,
          }
        }
        pickup={false}
        setDepartureDate={[Function]}
        setDurationFilter={[Function]}
        setMoT={[Function]}
        shipment={
          Object {
            "cargo_notes": "FOO_CARGO_NOTES",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "incoterm_text": "FOO_INCOTERM_TEXT",
            "notes": "FOO_NOTES",
            "schedules_charges": Object {
              "FOO_HUB_ROUTE_KEY": Object {
                "foo": "FOO_ROUTE_KEY",
              },
            },
            "total_goods_value": Object {
              "currency": "USD",
              "value": 15,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 12,
            },
          }
        }
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="flex-75 offset-5 layout-row layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-align-space-between-center"
        >
          <div
            className="flex-none layout-row layout-align-space-around-center pointy"
            onClick={[Function]}
          >
            <i
              className="flex-none fa fa-angle-double-left"
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            />
            <p
              className="flex-none no_m"
            >
              Show earlier departures
            </p>
          </div>
          <div
            className="flex-none layout-row layout-align-space-around-center pointy"
            onClick={[Function]}
          >
            <p
              className="flex-none no_m"
            >
              Show later departures
            </p>
            <i
              className="flex-none fa fa-angle-double-right"
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-between-center route_header"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              size={3}
              text="This is the closest departure to the specified date"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <div
            className="flex-30 layout-row layout-align-end-center"
          >
            <NamedSelect
              className="flex-100"
              onChange={[Function]}
              options={
                Object {
                  "fooKey": "FOO_CURRENCY_OPTIONS",
                }
              }
              placeholder="Select Currency"
            />
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
      >
        <div
          className="flex-100 layout-row layout-align-start route_header"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              size={3}
              text="Alternative departures"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
